--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
 
         <h1>Microverse Recipes</h1>
-        
+        <a href=./recipes/fish.html>fish recipe</a>
+
     </body>
 </html>
