fish recipe and ingreidents been added with image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
 
         <h1>Microverse Recipes</h1>
-        <a href=./recipes/fish.html>fish recipe</a>
+        <a href="./recipes/fish.html">fish recipe</a>
 
     </body>
 </html>
