--- a/recipes/fish.html
+++ b/recipes/fish.html
@@ -12,5 +12,40 @@
 
         <h1>fish</h1>
 
+        <img src="../images/fish.jpg" alt="grilled fish">
+
+        <h2>grilled fish with lemon</h2>
+
+        <h3>ingredients</h3>
+
+        <ul>
+            <li>1 clove garlic, minced</li>
+            <li>6 tablespoons olive oil</li>
+            <li>1 teaspoon dried basil</li>
+            <li>1 teaspoon salt</li>
+            <li> 1 teaspoon ground black paper</li>
+            <li> 1 tablespoon fresh lemon juice</li>
+            <li> 1 tablespoon chopped fresh parsley</li>
+            <li>2 (6 ounce) fillets halibut</li>
+        </ul>
+
+        <h3>steps</h3>
+
+        <ol>
+            <li>In a stainless steel or glass bowl, combine garlic, <br>
+                olive oil, basil, salt, pepper, lemon juice, and parsley.</li>
+               <br> 
+            <li>Place the halibut filets in a shallow glass dish or a <br>
+                resealable plastic bag, and pour the marinade over the fish.<br>
+                Cover or seal and place in the refrigerator for 1 hour, turning occasionally.</li> 
+                <br>
+            <li>Preheat an outdoor grill for high heat and lightly oil grate. <br>
+                Set grate 4 inches from the heat.</li>  
+                <br>   
+            <li>Remove halibut filets from marinade and drain off the excess.<br>
+                 Grill filets 5 minutes per side or until fish is done when easily flaked with a fork.</li>      
+        </ol>
+
+
     </body>
 </html>
