chicken picture been added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <h1>Microverse Recipes</h1>
         <a href="./recipes/fish.html">fish recipe</a>
+        <a href="./recipes/chicken.html">chicken recipe</a>
 
     </body>
 </html>
