resized fish image

--- a/recipes/fish.html
+++ b/recipes/fish.html
@@ -12,7 +12,9 @@
 
         <h1>fish</h1>
 
-        <img src="../images/fish.jpg" alt="grilled fish">
+        <img src="../images/fish.jpg" alt="grilled fish"
+             width="500"
+             height="500">
 
         <h2>grilled fish with lemon</h2>
 
