fish and chicken images resized

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -10,9 +10,41 @@
 
     <body>
 
-        <h1> grilled chicken recipe</h1>
+        <img src="../images/grilledchicken.jpg" alt="grilled chicken"
+             width="700"
+             height="500">
 
-        <img src="../images/grilledchicken.jpg">
+   <h2>grilled chicken with veggies</h2>
+
+   <h3>ingredients</h3>
+
+   <ul>
+       <li>350 gm chicken</li>
+       <li>1/2 cup hung curd</li>
+       <li>1/2 teaspoon ginger paste</li>
+       <li>1/2 teaspoon garlic paste</li>
+       <li>1/2 teaspoon red chili powder</li>
+       <li>1/4 teaspoon coriander powder</li>
+       <li>1/4 teaspoon cumin powder</li>
+       <li>1/4 teaspoon powdered black pepper</li>
+   </ul>
+
+   <h3>steps</h3>
+
+   <ol>
+       <li>In a stainless steel or glass bowl, combine garlic, <br>
+           olive oil, basil, salt, pepper, lemon juice, and parsley.</li>
+          <br> 
+       <li>Place the halibut filets in a shallow glass dish or a <br>
+           resealable plastic bag, and pour the marinade over the fish.<br>
+           Cover or seal and place in the refrigerator for 1 hour, turning occasionally.</li> 
+           <br>
+       <li>Preheat an outdoor grill for high heat and lightly oil grate. <br>
+           Set grate 4 inches from the heat.</li>  
+           <br>   
+       <li>Remove halibut filets from marinade and drain off the excess.<br>
+            Grill filets 5 minutes per side or until fish is done when easily flaked with a fork.</li>      
+   </ol>  
 
         
 
