--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -31,21 +31,20 @@
 
    <h3>steps</h3>
 
-   <ol>
-       <li>In a stainless steel or glass bowl, combine garlic, <br>
-           olive oil, basil, salt, pepper, lemon juice, and parsley.</li>
-          <br> 
-       <li>Place the halibut filets in a shallow glass dish or a <br>
-           resealable plastic bag, and pour the marinade over the fish.<br>
-           Cover or seal and place in the refrigerator for 1 hour, turning occasionally.</li> 
-           <br>
-       <li>Preheat an outdoor grill for high heat and lightly oil grate. <br>
-           Set grate 4 inches from the heat.</li>  
-           <br>   
-       <li>Remove halibut filets from marinade and drain off the excess.<br>
-            Grill filets 5 minutes per side or until fish is done when easily flaked with a fork.</li>      
-   </ol>  
+   <h4>step 1 wash the chicken pieces</h4>
+   <p>To prepare this easy chicken recipe, wash the chicken pieces and prick them with a fork.<br>
+     Now, in a large bowl, combine hung curd, ginger paste, garlic paste, red chilli powder,<br>
+     coriander powder, cumin powder, black pepper, salt and garam masala.<br>
+     Stir all the ingredients together until well blended.</p>
 
+     <h4>step 2 Grill it to perfection and serve hot</h4>
+     <p>Now add the chicken pieces and apply the masala mixture all over them.<br>
+        Cover and refrigerate for at least 8 hours or up to 24 hours. Once done,<br>
+        preheat the oven at 190 degree Celsius. Remove the chicken pieces from the <br>
+        marinade and place them on a grilling tray. Grill them for 1 hour, flipping <br>
+        them after 30 minutes so that both sides can cook evenly. Check if the chicken <br>
+        has fully cooked by taking one piece out and cutting it with a knife. Serve hot with salad or a dip.</p>
+  
         
 
     </body>
