--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <body>
 
         <h1>Microverse Recipes</h1>
-        <a href="./recipes/fish.html">fish recipe</a>
+
+        <ul>
+            <li> <a href="./recipes/fish.html">fish recipe</a> </li>
         
-        <br>
 
-        <a href="./recipes/chicken.html">chicken recipe</a>
 
+            <li> <a href="./recipes/chicken.html">chicken recipe</a> </li>
+        
+        </ul>
     </body>
 </html>
